Correccion en confirm mail

--- a/NaturaApp.Api/appsettings.json
+++ b/NaturaApp.Api/appsettings.json
@@ -9,10 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": { "DefaultConnection": "Server=keypress.serveftp.net;Database=NaturaApp;User Id=sa;password=sentey14$;Trusted_Connection=False;MultipleActiveResultSets=true" },
   "Mail": {
-    "From": "luis.solflix@gmail.com",
+    "From": "keypressoft@gmail.com",
     "Smtp": "smtp.gmail.com",
     "Port": 587,
-    "Password": "Solflix230665*"
+    "Password": "pjm791pjm"
   },
   "Tokens": {
     "Key": "dalsdjlaj7997&%$#)=?9hasdlakdjkuoiqwJKJK)/()/LJLJLnm,mskldfjssljlsdKSÑDFFSsdfsdfnvDFKLÑWIOEjklnlsfdklsjfiuisouJLKHLLA",
